--- a/arm-gcc-mfloat-abi/Makefile
+++ b/arm-gcc-mfloat-abi/Makefile
@@ -1,15 +1,17 @@
 # tary, 11:46 2013-4-7
+# tary, 11:31 2014-4-17
 
-MAIN=mfloat-abi
+MAIN?=mfloat-abi
+CROSS_COMPILE?=arm-none-linux-gnueabi-
 
 SRC=$(MAIN).c
-CC=arm-none-linux-gnueabi-gcc
-OBJDUMP=arm-none-linux-gnueabi-objdump
+CC=$(CROSS_COMPILE)gcc
+OBJDUMP=$(CROSS_COMPILE)objdump
 
 TARGETS = $(addprefix $(MAIN)-,soft softfp hard)
-FLOATABI = -mfloat-abi=$(subst $(MAIN)-,,$@)
-# CFLAGS = -fno-builtin -march=armv7-a -mfpu=neon -g
-CFLAGS = -fno-builtin -march=armv7-a -mfpu=neon -g -c
+FLOATABI = -lm -mfloat-abi=$(subst $(MAIN)-,,$@)
+CFLAGS = -fno-builtin -march=armv7-a -mfpu=neon -g
+# CFLAGS = -fno-builtin -march=armv7-a -mfpu=neon -g -c
 
 all : $(TARGETS)
 
@@ -20,3 +22,10 @@ $(TARGETS): $(SRC)
 clean:
 	-rm $(TARGETS)
 	-rm *.lss
+
+
+help:
+	@echo command like :
+	@echo "  make -k"
+	@echo "  MAIN=mfloat-abi make -k"
+	@echo "  CROSS_COMPILE=arm-none-linux-gnueabi- MAIN=hello-mfloat make -k"
