add -fpic option to project arm-gcc-mabi

--- a/arm-gcc-mabi/Makefile
+++ b/arm-gcc-mabi/Makefile
@@ -9,7 +9,7 @@ OBJDUMP=$(CROSS_COMPILE)objdump
 
 TARGETS = $(addsuffix .S,$(addprefix $(MAIN)-,aapcs aapcs-linux apcs-gnu atpcs))
 TARGETS += $(addsuffix .S,$(addprefix $(MAIN)-frame-,aapcs aapcs-linux apcs-gnu atpcs))
-MABI = -lm -mabi=$(basename $(subst frame-,,$(subst $(MAIN)-,,$@)))
+MABI = -fpic -mabi=$(basename $(subst frame-,,$(subst $(MAIN)-,,$@)))
 MABI += $(patsubst %,-mapcs-frame,$(filter $(MAIN)-frame-%,$@))
 CFLAGS = -fno-builtin -march=armv7-a -mfpu=neon
 
