Fix: stringstream::clear() make it reusable.

--- a/ticpp-twoex/T02/makefile
+++ b/ticpp-twoex/T02/makefile
@@ -7,6 +7,10 @@
 # Invoke with: make compiler-name
 # or: make clean
 
+ifeq ($(MAKECMDGOALS),)
+MAKECMDGOALS = g++
+endif
+
 ifneq ($(MAKECMDGOALS),clean)
 include ../$(MAKECMDGOALS).mac
 endif
