Fixed: ether-monitor unstable if startup before network-online.target

--- a/shell-scripts/ether_monitor/ether-monitor.service
+++ b/shell-scripts/ether_monitor/ether-monitor.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Ethernet Monitor Service
-After=local-fs.target
+Wants=network-online.target
+After=network.target network-online.target
 
 [Service]
 User=root
