Add: bitbake practical guide example

--- a/bitbake-hello/meta-hl-layer/conf/layer.conf
+++ b/bitbake-hello/meta-hl-layer/conf/layer.conf
@@ -1,8 +1,9 @@
 BBPATH .= ":${LAYERDIR}"
 
 BBFILES += "${LAYERDIR}/*.bb"
+BBFILES += "${LAYERDIR}/recipes-*/*/*.bb"
 
 BBFILE_COLLECTIONS += "hl-layer"
 BBFILE_PATTERN_hl-layer := "^${LAYERDIR}/"
 
-# LAYERSERIES_COMPAT_hl-layer := 
+LAYERSERIES_COMPAT_hl-layer = ""
