Add: bitbake-hello adapt to poky's bitbake binary

--- a/bitbake-hello/conf/local.conf
+++ b/bitbake-hello/conf/local.conf
@@ -1,6 +1,12 @@
+
+MACHINE  ??= "qemuarm"
+
+DISTRO ?= "poky"
+
+# CONF_VERSION = "2"
+
 # TMPDIR  = "${TOPDIR}/tmp"
 CACHE   = "${TMPDIR}/cache"
 # STAMP   = "${TMPDIR}/stamps"
 # T       = "${TMPDIR}/work"
 # B       = "${TMPDIR}"
-
